--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,8 @@
     "express-mongo-sanitize": "^2.2.0",
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
+    "isomorphic-dompurify": "^2.26.0",
+    "jsdom": "^26.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.4",
     "multer": "^2.0.1"
